--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <b><small>Computers & Education</small></b>
     </p>
     <p>
-    <a href="Computers & Education">Volume 128</a>, January 2019, Pages 365-376
+    <a href="https://www.sciencedirect.com/journal/computers-and-education/vol/128/suppl/C" target="_blank">Volume 128</a>, January 2019, Pages 365-376
     </p>
     <h1>Learning to code or coding to learn? A systematic review</h1>
     <p>
-        <a href="https://www.scopus.com/authid/detail.uri?authorId=57204187244">Shahira Popat</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=25121914800">Louise Starkey</a>
+        <a href="https://www.scopus.com/authid/detail.uri?authorId=57204187244" target="_blank">Shahira Popat</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=25121914800" target="_blank">Louise Starkey</a>
     </p>
     <h2>Abstract</h2>
     <p>
@@ -43,7 +43,7 @@
     </figure>
     <p>Om jonge generaties voor te bereiden op de complexe digitale wereld, is er een toenemende belangstelling voor het integreren van programmeeronderwijs in het schoolcurriculum. Het onderwijzen van coderen biedt niet alleen de mogelijkheid om praktische vaardigheden op te bouwen, maar het kan ook tal van andere educatieve voordelen bieden. Dit artikel onderzoekt de onderzoeksresultaten om een holistisch inzicht te bieden in de educatieve uitkomsten voor kinderen die leren programmeren op school.</p>
     <h2>Methodologie</h2>
-    <p>Om een grondige analyse van de educatieve uitkomsten van programmeren te verkrijgen, werd een systematische review uitgevoerd. Een uitgebreide zoekopdracht werd uitgevoerd in toonaangevende academische databases, waaronder <a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a>, <a href="https://www.ebsco.com/products/research-databases/education-source">Education Source</a> en <a href="https://eric.ed.gov/">ERIC</a> om relevante artikelen te identificeren. De geselecteerde artikelen werden onderworpen aan een gedetailleerde kwaliteitsbeoordeling en tien artikelen werden uiteindelijk opgenomen in de synthesefase. Een thematische analyse werd toegepast om de bevindingen te organiseren en een overkoepelend model te ontwikkelen dat de belangrijkste thema's en educatieve uitkomsten weergeeft.</p>
+    <p>Om een grondige analyse van de educatieve uitkomsten van programmeren te verkrijgen, werd een systematische review uitgevoerd. Een uitgebreide zoekopdracht werd uitgevoerd in toonaangevende academische databases, waaronder <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">PubMed</a>, <a href="https://www.ebsco.com/products/research-databases/education-source" target="_blank">Education Source</a> en <a href="https://eric.ed.gov/" target="_blank">ERIC</a> om relevante artikelen te identificeren. De geselecteerde artikelen werden onderworpen aan een gedetailleerde kwaliteitsbeoordeling en tien artikelen werden uiteindelijk opgenomen in de synthesefase. Een thematische analyse werd toegepast om de bevindingen te organiseren en een overkoepelend model te ontwikkelen dat de belangrijkste thema's en educatieve uitkomsten weergeeft.</p>
     <blockquote>
         <p><em>"Door middel van een grondige analyse van de educatieve uitkomsten van programmeren, hebben we een veelzijdig beeld verkregen van de impact op verschillende aspecten van de leerervaring. Deze methodologische benadering biedt een solide basis voor het onderzoeken en begrijpen van de waarde van programmeren in het schoolcurriculum."</em> —Nova Eeken, Hogeschool NOVI</p>
     </blockquote>
