--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <title>Scientific Research Article</title>
 </head>
 <body>
+    <main>
     <ol>
-        <li>Abstract</li>
-        <li>Inleiding</li>
-        <li>Methodologie</li>
-        <li>Resultaten</li>
+        <a href="#abstract"><li>Abstract</li></a>
+        <a href="#inleiding"><li>Inleiding</li></a>
+        <a href="#methodologie"><li>Methodologie</li></a>
+        <a href="#resultaten"><li>Resultaten</li></a>
         <ul>
             <li>Wiskundig probleemoplossen</li>
             <li>Kritisch denken</li>
             <li>Zelfmanagement</li>
             <li>Academische vaardigheden</li>
         </ul>
-        <li>Conclusie</li>
+        <a href="#conclusie"><li>Conclusie</li></a>
     </ol>
     <p>
         <b><small>Computers & Education</small></b>
@@ -28,12 +29,12 @@
     <p>
         <a href="https://www.scopus.com/authid/detail.uri?authorId=57204187244" target="_blank">Shahira Popat</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=25121914800" target="_blank">Louise Starkey</a>
     </p>
-    <h2>Abstract</h2>
+    <h2 id="abstract">Abstract</h2>
     <p>
         <em>De heropleving van computerprogrammeren in het schoolcurriculum biedt de belofte om studenten voor te bereiden op de toekomst, waarbij de leerervaring verder gaat dan alleen het leren coderen. Dit onderzoek heeft de bestaande literatuur geanalyseerd om de educatieve resultaten voor kinderen die op school leren programmeren te onderzoeken. Er is een <u>systematische review</u> toegepast om relevante artikelen te identificeren, en een thematische analyse uitgevoerd om de bevindingen te synthetiseren. Tien artikelen werden opgenomen in de synthese, waarbij een overkoepelend model werd ontwikkeld dat de belangrijkste thema's weergeeft. De resultaten tonen aan dat, hoewel studenten leren programmeren, een scala aan andere educatieve uitkomsten kan worden bereikt of geoefend door middel van het onderwijzen van coderen. Deze uitkomsten omvatten wiskundig probleemoplossen, kritisch denken, <u>sociale vaardigheden</u>, zelfmanagement en academische vaardigheden. De review benadrukt ook het belang van instructieontwerp voor het ontwikkelen van deze educatieve uitkomsten door middel van coderen.</em>
     </p>
     <hr>
-    <h2>Inleiding</h2>
+    <h2 id="inleiding">Inleiding</h2>
     <p>
         Programmeren of computerprogrammeren werd in de jaren zestig voor het eerst ontwikkeld met schoolkinderen in gedachten, met de visie dat het leren zou transformeren <em>(Feurzeig, Papert, & Lawler, 2011)</em>. De snelle ontwikkeling van technologie heeft geleid tot een groeiende vraag naar programmeervaardigheden in de moderne samenleving.
     </p>
@@ -42,14 +43,106 @@
         <figcaption><b>Figuur 1: </b>vraag naar programmeervaardigheden per jaar</figcaption>
     </figure>
     <p>Om jonge generaties voor te bereiden op de complexe digitale wereld, is er een toenemende belangstelling voor het integreren van programmeeronderwijs in het schoolcurriculum. Het onderwijzen van coderen biedt niet alleen de mogelijkheid om praktische vaardigheden op te bouwen, maar het kan ook tal van andere educatieve voordelen bieden. Dit artikel onderzoekt de onderzoeksresultaten om een holistisch inzicht te bieden in de educatieve uitkomsten voor kinderen die leren programmeren op school.</p>
-    <h2>Methodologie</h2>
+    <h2 id="methodologie">Methodologie</h2>
     <p>Om een grondige analyse van de educatieve uitkomsten van programmeren te verkrijgen, werd een systematische review uitgevoerd. Een uitgebreide zoekopdracht werd uitgevoerd in toonaangevende academische databases, waaronder <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">PubMed</a>, <a href="https://www.ebsco.com/products/research-databases/education-source" target="_blank">Education Source</a> en <a href="https://eric.ed.gov/" target="_blank">ERIC</a> om relevante artikelen te identificeren. De geselecteerde artikelen werden onderworpen aan een gedetailleerde kwaliteitsbeoordeling en tien artikelen werden uiteindelijk opgenomen in de synthesefase. Een thematische analyse werd toegepast om de bevindingen te organiseren en een overkoepelend model te ontwikkelen dat de belangrijkste thema's en educatieve uitkomsten weergeeft.</p>
     <blockquote>
         <p><em>"Door middel van een grondige analyse van de educatieve uitkomsten van programmeren, hebben we een veelzijdig beeld verkregen van de impact op verschillende aspecten van de leerervaring. Deze methodologische benadering biedt een solide basis voor het onderzoeken en begrijpen van de waarde van programmeren in het schoolcurriculum."</em> —Nova Eeken, Hogeschool NOVI</p>
     </blockquote>
-    <h2>Resultaten</h2>
+    <h2 id="resultaten">Resultaten</h2>
     <p>Uit de analyse van de geselecteerde artikelen kwamen diverse educatieve uitkomsten naar voren die geassocieerd worden met het leren programmeren. Een overkoepelend model werd ontwikkeld om deze uitkomsten te visualiseren (zie Figuur 2). De bevindingen laten zien dat programmeren niet alleen de technische vaardigheden van studenten ontwikkelt, maar ook positieve effecten heeft op andere gebieden van leren.</p>
+    <table>
+        <caption><strong>Figuur 2:</strong> statistische aannemelijkheid onderzoeksresultaten</caption>
+        <thead>
+            <tr>
+                <th scope="col" Onderwijsresultaat>Onderwijsresultaat</th>
+                <th scope="col"Omschrijving>Omschrijving</th>
+                <th scope="col"P-waarde>P-waarde</th>
+            </tr>
+        </thead>
+        <tbody>
+            <td>Wiskundig probleemoplossen</td>
+            <td>Het leren programmeren bevordert wiskundige vaardigheden zoals logisch denken en patroonherkenning.</td>
+            <td>0.023</td>
+        </tbody>
+        <tbody>
+            <td>Kritisch denken</td>
+            <td>Het vereist een systematische en analytische benadering, waardoor studenten hun kritisch denkvermogen verbeteren.</td>
+            <td>0.012</td>
+        </tbody>
+        <tbody>
+            <td>Zelfmanagement</td>
+            <td>Het vraagt nauwkeurigheid, doorzettingsvermogen en zelfdiscipline, waardoor zelfmanagementvaardigheden worden ontwikkeld.</td>
+            <td>0.001</td>
+        </tbody>
+        <tbody>
+            <td>Academische vaardigheden</td>
+            <td>Het leren programmeren verbetert cognitieve flexibiliteit, lees- en schrijfvaardigheid en probleemoplossend vermogen.</td>
+            <td>0.002</td>
+        </tbody>
+    </table>
+    <h3>Wiskundig probleemoplossen</h3>
+    <p>Het leren van programmeren stimuleert de ontwikkeling van wiskundige vaardigheden, zoals logisch denken, patroonherkenning en probleemoplossen. Door middel van code kunnen complexe wiskundige concepten worden toegepast en gevisualiseerd. Hieronder wordt een voorbeeld gegeven van een eenvoudig programma dat de Fibonacci-reeks genereert, een bekende wiskundige reeks:</p>
+    <samp>
+        <code>
+            <pre>
+def fibonacci(n):
+    if n <= 0:
+        return []
+    elif n == 1:
+        return [0]
+    elif n == 2:
+        return [0, 1]
+    else:
+        fib_sequence = [0, 1]
 
+    while len(fib_sequence) < n:
+        next_number = fib_sequence[-1] + fib_sequence[-2]
+        fib_sequence.append(next_number)
 
+    return fib_sequence
+
+print(fibonacci(10))
+            </pre>
+        </code>
+    </samp>
+    <p>Wat leidt tot de volgende output in de terminal:</p>
+    <samp>
+        <code>
+            [0, 1, 1, 2, 3, 5, 8, 13, 21, 34]
+        </code>
+    </samp>
+    <p>In dit voorbeeld wordt de functie <samp>fibonacci</samp> gebruikt om de Fibonacci-reeks tot het opgegeven aantal getallen te genereren. Door te werken met de logica en wiskundige concepten achter de Fibonacci-reeks, zoals iteratie en recursie, ontwikkelen studenten hun wiskundig probleemoplossend vermogen. Het coderen van dergelijke algoritmen helpt studenten om abstract redeneren toe te passen <em>(Albion, 2016; Balanskat & Englehart, 2014)</em> en wiskundige concepten beter te begrijpen.</p>
+    <h3>Kritisch denken</h3>
+    <p>Het coderen vereist een systematische en analytische benadering, waarbij studenten worden aangemoedigd om logisch te redeneren en problemen op te lossen. Door het ontleden van complexe problemen in kleinere componenten en het ontwikkelen van algoritmen, verbeteren studenten hun kritisch denkvermogen. Ze leren problemen oplossen stap voor stap en evalueren de efficiëntie en effectiviteit van hun code <em>(Resnick et al., 2009).</em></p>
+    <h3>Zelfmanagement</h3>
+    <p>Het programmeren vereist nauwkeurigheid, doorzettingsvermogen en zelfdiscipline. Studenten leren plannen, organiseren en prioriteiten stellen om hun projecten succesvol af te ronden. Door te programmeren oefenen studenten zelfmanagementvaardigheden, zoals het stellen van doelen, het plannen van taken en het behouden van overzicht. Het succesvol oplossen van programmeerproblemen activeert chemische reacties in de hersenen <em>(Balanskat & Englehart, 2014)</em>, waaronder het vrijkomen van serotonine (C<sub>10</sub>H<sub>12</sub>N<sub>20</sub>), waardoor studenten een gevoel van voldoening en welzijn ervaren.</p>
+    <figure>
+        <img src="assets/serotonine_chart.png" alt="Figuur 3: Scheikundige representatie serotonine">
+        <figcaption><strong>Figuur 3:</strong> scheikundige representatie serotonine</figcaption>
+    </figure>
+    <h3>Academische vaardigheden</h3>
+    <p>Naast de directe educatieve voordelen, heeft het leren programmeren ook een positief effect op academische vaardigheden, zoals leesvaardigheid, schrijfvaardigheid en probleemoplossend vermogen. Het coderen vergroot de cognitieve flexibiliteit en de capaciteit om complexe informatie te verwerken. Het biedt studenten ook de mogelijkheid om vertrouwd te raken met technologische tools en concepten die essentieel zijn in de moderne wereld. Ze leren bijvoorbeeld over databases, netwerken, gebruikersinterfaces en web technologieën, zoals <abbr>HTML</abbr> (HyperText Markup Language) en <abbr>CSS</abbr> (Cascading Style Sheets). Deze technologische kennis kan hen helpen bij het uitvoeren van onderzoek, het creëren van multimedia-inhoud en het presenteren van informatie op digitale platforms, zoals wordt gedaan op het wereldwijd bekende <a href="https://edhub.novi.nl/">EdHub</a> gebouwd door NOVI Hogeschool (zie Figuur 4). Het schijnt dus vrij lastig te zijn zulke leuke programmeervideo's te maken als je zelf nooit hebt geleerd hoe je moet programmeren. Schokkend!</p>
+    <video controls poster="assets/placeholder_video.png">
+        <source src="assets/multimedia_preview_edhub.mov">
+    </video>
+    <figcaption><strong>Figuur 4:</strong>Video-illustratie van multimedia op EdHub uit de cursus JavaScript</figcaption>
+    <h2 id="conclusie">Conclusie</h2>
+    <p>Het integreren van programmeren in het schoolcurriculum heeft bewezen educatieve voordelen voor iedereen. Naast het leren coderen, verwerven studenten waardevolle vaardigheden op het gebied van wiskundig probleemoplossen, kritisch denken, sociale vaardigheden, zelfmanagement en academische groei.</p>
+    <p>Het is van cruciaal belang dat onderwijsinstellingen effectieve instructieontwerpen ontwikkelen om deze educatieve uitkomsten te optimaliseren en studenten voor te bereiden op de uitdagingen van de toekomst. Gelukkig is de IT-opleider NOVI Hogeschool daar al sinds 1958 druk mee bezig. Heb <strong>jij</strong> je al ingeschreven voor een IT-opleiding bij NOVI?</p>
+    </main>
 </body>
+<footer>
+    <h4>Bedankt voor het lezen van dit artikel. Laat ons weten wat je ervan vond!</h4>
+    <form action="" method="get" class="review">
+        <div class="review">
+            <label for="naam">Naam:</label>
+            <input type="text" name="naam" id="naam" required/>
+        </div>
+        <br>
+        <div class="review">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required/>
+        </div>
+    </form>
+</footer>
 </html>
