--- a/index.html
+++ b/index.html
@@ -167,13 +167,18 @@ print(fibonacci(10))
                     <input type="radio" value="misschien"/>
                     <label for="misschien">Misschien</label>
                 </div>
+                <br>
                 <div>
                     <label for="review">Opmerkingen</label>
-
+                </div>
+                <div>
                     <textarea id="review" name="review" rows="5" cols="33">Wat vond je van dit artikel?</textarea>
+                </div>
+                <div>
                     <input type="checkbox" id="abonneer" name="abonneer" value="nieuwsbrief" checked/>
                     <label for="nieuwsbrief">Schrijf me in voor de nieuwsbrief</label>
                 </div>
+                <br>
                 <div>
                     <button type="submit">versturen</button>
                 </div>
