Added placeholder text to textarea element

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <main>
+    <aside>
     <ol>
         <a href="#abstract"><li>Abstract</li></a>
         <a href="#inleiding"><li>Inleiding</li></a>
@@ -20,6 +21,7 @@
         </ul>
         <a href="#conclusie"><li>Conclusie</li></a>
     </ol>
+    </aside>
     <p>
         <b><small>Computers & Education</small></b>
     </p>
@@ -84,7 +86,7 @@
     </table>
     <h3>Wiskundig probleemoplossen</h3>
     <p>Het leren van programmeren stimuleert de ontwikkeling van wiskundige vaardigheden, zoals logisch denken, patroonherkenning en probleemoplossen. Door middel van code kunnen complexe wiskundige concepten worden toegepast en gevisualiseerd. Hieronder wordt een voorbeeld gegeven van een eenvoudig programma dat de Fibonacci-reeks genereert, een bekende wiskundige reeks:</p>
-    <samp>
+
         <pre>
             <code>
 def fibonacci(n):
@@ -106,7 +108,7 @@ def fibonacci(n):
 print(fibonacci(10))
             </code>
         </pre>
-    </samp>
+
     <p>Wat leidt tot de volgende output in de terminal:</p>
     <samp>
         <code>
@@ -171,7 +173,7 @@ print(fibonacci(10))
             <br>
             <label for="review">Opmerkingen</label>
             <br>
-            <textarea id="review" name="review" rows="5" cols="33">Wat vond je van dit artikel?</textarea>
+            <textarea id="review" name="review" rows="5" cols="33" placeholder="Wat vond je van dit artikel?"></textarea>
             <br>
             <input type="checkbox" id="abonneer" name="abonneer" value="nieuwsbrief" checked/>
             <label for="abonneer">Schrijf me in voor de nieuwsbrief</label>
