added article tags

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </blockquote>
     <p>—Nova Eeken, <em>Hogeschool NOVI</em></p>
     <h2 id="resultaten">Resultaten</h2>
+    <article>
     <p>Uit de analyse van de geselecteerde artikelen kwamen diverse educatieve uitkomsten naar voren die geassocieerd worden met het leren programmeren. Een overkoepelend model werd ontwikkeld om deze uitkomsten te visualiseren (zie Figuur 2). De bevindingen laten zien dat programmeren niet alleen de technische vaardigheden van studenten ontwikkelt, maar ook positieve effecten heeft op andere gebieden van leren.</p>
     <table>
         <caption><strong>Figuur 2:</strong> statistische aannemelijkheid onderzoeksresultaten</caption>
@@ -120,6 +121,7 @@ print(fibonacci(10))
     <p>Het coderen vereist een systematische en analytische benadering, waarbij studenten worden aangemoedigd om logisch te redeneren en problemen op te lossen. Door het ontleden van complexe problemen in kleinere componenten en het ontwikkelen van algoritmen, verbeteren studenten hun kritisch denkvermogen. Ze leren problemen oplossen stap voor stap en evalueren de efficiëntie en effectiviteit van hun code <em>(Resnick et al., 2009).</em></p>
     <h3>Zelfmanagement</h3>
     <p>Het programmeren vereist nauwkeurigheid, doorzettingsvermogen en zelfdiscipline. Studenten leren plannen, organiseren en prioriteiten stellen om hun projecten succesvol af te ronden. Door te programmeren oefenen studenten zelfmanagementvaardigheden, zoals het stellen van doelen, het plannen van taken en het behouden van overzicht. Het succesvol oplossen van programmeerproblemen activeert chemische reacties in de hersenen <em>(Balanskat & Englehart, 2014)</em>, waaronder het vrijkomen van serotonine (C<sub>10</sub>H<sub>12</sub>N<sub>20</sub>), waardoor studenten een gevoel van voldoening en welzijn ervaren.</p>
+    </article>
     <figure>
         <img src="assets/serotonine_chart.png" alt="Figuur 3: Scheikundige representatie serotonine">
         <figcaption><strong>Figuur 3:</strong> scheikundige representatie serotonine</figcaption>
